fixed styling on mobile menu, refactored old css, added more text to product description, add more hover color changes

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -66,18 +66,12 @@ section:not(.hero):nth-child(odd) {
     color: $secondary-color;
 }
 
-
-
 // Classes
 
 .brand {
     text-transform: uppercase;
     font-size: 2.5rem;
     margin-left: 3rem;
-    
-    a {
-        display: flex;
-    }
 }
 
 .hero {
@@ -99,6 +93,7 @@ section:not(.hero):nth-child(odd) {
     background-size: cover;
     z-index: -1;
     background-color: #1d1e2b;
+    opacity: 1;
 }
 
 .hero-content {
@@ -160,13 +155,13 @@ header {
     color: #fff;
     
     a {
-    opacity: 0.75;
-    color: #fff;
+        opacity: 0.75;
+        color: #fff;
     }
 
     a:hover {
         opacity: 1;
-        text-decoration: none;
+        text-decoration: none;  //prevent text decoration on brand (bug?)
     }
     
     nav {
@@ -189,8 +184,8 @@ header {
         }
         
         i {
-            color: aqua;
-            opacity: 100;
+            color: $primary-color;
+            opacity: 1;
         }
         
         
@@ -248,6 +243,10 @@ header {
     
         .fa {
             font-size: 10rem;
+        }
+        
+        .fa:hover {
+            color: $primary-color;
         }
         
         .fa-mobile {
@@ -368,7 +367,7 @@ footer {
 
 // Mobile Menu
 
-    /* Screen reader only */
+    // Screen reader only
     
     .sr-only {
         position: absolute;
@@ -381,7 +380,7 @@ footer {
         border: 0;
     }
 
-    /* Button styling */
+    // Button styling
     
     .menu-toggle {
         display: inline-block;
@@ -396,10 +395,8 @@ footer {
         color: $primary-color;
     }
 
-    /*
-     Default styles + Mobile first
-     Offscreen menu style
-    */
+    // Default styles + Mobile first
+    // Offscreen menu style
     
     .main-menu {
         position: absolute;
@@ -437,21 +434,24 @@ footer {
     .main-menu a:hover,
     .main-menu a:focus {
         background: #000;
+        color: $primary-color;
+    }
+    
+    a#main-menu-toggle {
+        margin-left: 90%;
     }
     
     .main-menu .menu-close {
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 1.5rem;
+        top: 0.5rem;
+        background: $secondary-color;
     }
 
-    /*
-     On small devices, allow it to toggle...
-    */
-    /*
-     :target for non-JavaScript
-     aria-expanded="true/false" will be for JavaScript
-    */
+    
+    // On small devices, allow it to toggle
+    
+    // :target for non-JavaScript aria-expanded="true/false" will be fiorJavaScript
     
     .main-menu:target,
     .main-menu[aria-expanded="true"] {
@@ -473,10 +473,7 @@ footer {
       z-index: 1000;
     }
 
-    /* 
-     We could use `.main-menu:target:after`, but
-     it wouldn't be clickable.
-    */
+    // We could use `.main-menu:target:after`, but it wouldn't be clickable
     
     .main-menu:target + .backdrop,
     .main-menu[aria-expanded="true"] + .backdrop {
@@ -488,7 +485,7 @@ footer {
       width: 100%;
       height: 100%;
       z-index: 998;
-      background: $tert-color;
+      background: $secondary-color;
       background: rgba(29, 30, 43,.85);
       cursor: default;
     }
@@ -501,10 +498,8 @@ footer {
       }
     }
 
-    /*
-     Larger screen styling
-     Horizontal menu
-    */
+    // Larger screen styling
+    // Horizontal menu
 
     @media (min-width: 50rem) {
         .menu-toggle,
@@ -512,7 +507,7 @@ footer {
           display: none;
         }
   
-        /* Undo positioning of off-canvas menu */
+        // Undo positioning of off-canvas menu
       
         .main-menu {
             position: relative;
@@ -523,7 +518,7 @@ footer {
       
         .main-menu ul {
     
-            /* Undo off-canvas styling */
+            // Undo off-canvas styling
             
             padding: 0;
             -webkit-box-shadow: none;
